sumo/tests/traci/ChangeLane/InvalidLaneId/errors.traci
Error: Answered with error to command 19: No lane existing with given id on the current road
Error while receiving command: tcpip::Socket::receive() @ recv: No error
Error while sending command: send failed: Software caused tcpip::Socket abort
